
add_subdirectory(simplelog)
add_subdirectory(basic)
add_subdirectory(md5)
add_subdirectory(proto)
add_subdirectory(auto)
add_subdirectory(error)
add_subdirectory(sys)
add_subdirectory(core)
add_subdirectory(config)
add_subdirectory(curl)
add_subdirectory(database)
add_subdirectory(event)
add_subdirectory(log)
add_subdirectory(socket)
add_subdirectory(net)
add_subdirectory(ssl)
add_subdirectory(ctrl)
add_subdirectory(json)
add_subdirectory(app)
add_subdirectory(base64)
add_subdirectory(http)
add_subdirectory(websocket)
add_subdirectory(socks5)
add_subdirectory(windows)
add_subdirectory(netmgr)
add_subdirectory(wifimgr)
add_subdirectory(tun)
add_subdirectory(lwip)
add_subdirectory(gps)
add_subdirectory(dns)
add_subdirectory(asyncDns)
add_subdirectory(dbus)
add_subdirectory(prometheus)
add_subdirectory(serverApp)
