
# A custom target for specific tests to add as a dependency to
add_custom_target(tests)

add_subdirectory(calendarTime)
add_subdirectory(file)
add_subdirectory(proto)
add_subdirectory(curl)
add_subdirectory(easyCurl)
add_subdirectory(gps)
add_subdirectory(json)
add_subdirectory(timer)
add_subdirectory(signal)
add_subdirectory(dataStore)
add_subdirectory(ssl)
add_subdirectory(netmgr)
add_subdirectory(netmgrcontrol)
add_subdirectory(tun)
add_subdirectory(wifimgr)
add_subdirectory(wifimgrcontrol)
add_subdirectory(websocket)
add_subdirectory(dns)
add_subdirectory(asyncDns)
add_subdirectory(socks5)
add_subdirectory(dbus)
add_subdirectory(prometheus)

add_subdirectory(unit)
